--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aniso8601==9.0.1
 attrs==22.2.0
 click==8.1.3
 Flask==2.2.2
+Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-Migrate==4.0.1
 flask-restx==1.0.3
