--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,8 @@ six==1.16.0
 SQLAlchemy==1.4.46
 Werkzeug==2.2.2
 zipp==3.11.0
+JPype1==1.4.1
+konlpy==0.6.0
+lxml==4.9.2
+numpy==1.24.2
+packaging==23.0
